--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-paging:2.5.0-alpha01"
 
+    implementation 'com.github.yogacp:android-viewbinding:1.0.4'
 
     implementation("com.tbuonomo:dotsindicator:4.3")
 
